# libplaydar-qt

./: .gitmodules  CMakeLists.txt  PlaydarAuthRequest.cpp  PlaydarAuthRequest.h  libplaydar-qt.kdev4
